# IGVC_19

./: .gitignore  28May_Netaji.yaml  28May_netaji_morning.yaml  README.md  bash_edit.py  cam.sh  camera_params.yaml  enu_points.txt  frames.gv  gps_points.txt  gps_points_N.txt  gps_points_S.txt  gps_qualification_point.txt  lidar_params  odom_points.txt  params_tuned.yaml  params_tuned_2.yaml  params_tuned_30.yaml  run_sensors.sh  teb_params_no_mans_land.sh  teb_params_vision.sh  testgps1.txt  testgps2.txt  testgps3.txt
Gazebo_Simulation/: Simulation_README.txt  publishpoints.cpp  saveway.cpp  waypoints1.txt
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: eklavya4_roboteq.pc  hokuyo_node.pc  huskey_move.pc  robot_localization.pc  robot_setup_tf.pc  tf_eklavya.pc  videoPub.pc  vision.pc
devel/lib/videoPub/: videoPublisher
devel/lib/vision/: master
devel/share/eklavya4_roboteq/cmake/: eklavya4_roboteq-msg-paths.cmake  eklavya4_roboteqConfig.cmake
devel/share/hokuyo_node/cmake/: hokuyo_nodeConfig.cmake
devel/share/huskey_move/cmake/: huskey_moveConfig.cmake
devel/share/robot_localization/cmake/: robot_localization-msg-paths.cmake  robot_localizationConfig.cmake
devel/share/robot_setup_tf/cmake/: robot_setup_tfConfig.cmake
devel/share/tf_eklavya/cmake/: tf_eklavyaConfig.cmake
devel/share/videoPub/cmake/: videoPubConfig.cmake
devel/share/vision/cmake/: visionConfig.cmake
hokuyo_node/: README.md
localisation/: odom_imu.cpp
localisation/include/robot_localization/: odom_and_imu.hpp
localisation/launch/: dual_ekf_navsat.launch
localisation/params/: dual_ekf_navsat_example.yaml
localisation/src/: imu.cpp  odom_imu.cpp
params/: 10th_june_10am_kgp_tuned.yaml  1_june.yaml  3.yaml  4th_10am.yaml  7th_june_1-30  7th_june_6pm.yaml  8th_june_run  9th_june_230pm.yaml  tsc_1june_night.yaml
planning/huskey_move/src/: move.launch
planning/huskey_move/src/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
roboteq/: CMakeLists.txt
roboteq/Arduino Codes/nano_flash_estop/: nano_flash_estop.ino
roboteq/launch/: manual_launch.launch
roboteq/msg/: control.msg  diagnose_msg.msg
roboteq/src/: command_subscriber_roboteq_client.cpp  joy2.cpp  manual.cpp  roboteq_server.cpp
roboteq/srv/: SetSpeed.srv
src/: frames.gv
src/bms/: CMakeLists.txt  README.txt  package.xml
src/bms/Arduino Code/current_and_voltageV3/: current_and_voltageV3.ino
src/bms/src/: bmsFinal.cpp
src/hokuyo_node/: hokuyo_test.launch
src/husky/husky_gazebo/launch/: playpen.launch
src/husky/husky_gazebo/worlds/: IGVC.world
src/localisation/: igvc.rviz
src/localisation/launch/: dual_ekf_navsat.launch
src/localisation/params/: dual_ekf_navsat_example.yaml
src/localisation/src/: imu.cpp  odom_imu.cpp
src/outdoor_waypoint_nav/: CMakeLists.txt
src/outdoor_waypoint_nav/include/: gps_waypoint.hpp  gps_waypoint_live.hpp  gps_waypoint_move_base.hpp  switchgps.hpp
src/outdoor_waypoint_nav/src/: gps_waypoint.cpp  qualification.cpp  qualification_odom.cpp  switchgps.cpp  switchgps_dense.cpp  switchgps_live.cpp  switchgps_move_base.cpp  switchgps_odom.cpp  switchgps_ramp.cpp
src/outdoor_waypoint_nav/waypoint_files/: points_outdoor.txt
src/planning/huskey_move/src/: move.launch
src/planning/huskey_move/src/param/: costmap_common_params.yaml  global_costmap_params.yaml  teb_local_planner_params.yaml
src/planning/robot_setup_tf/src/: map_to_baselink.launch  move_base.launch
src/roboteq/launch/: roboteq_launch.launch
src/roboteq/src/: command_subscriber_roboteq_client.cpp  current.cpp  manual.cpp
src/sensor_status/: CMakeLists.txt  package.xml
src/sensor_status/msg/: sensor_status.msg
src/sensor_status/src/: error_log.cpp
src/tf/: igvc.rviz
src/tf/launch/: tf.launch
src/tmuxinator/: Running_instructions
src/videoPub/: CMakeLists.txt
src/video_pub/: CMakeLists.txt  package.xml
src/video_pub/src/: video_publisher.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/cfg/: Tutorials.cfg
src/vision/include/: White_obstacle_updated.hpp  White_obstacle_updated_README.txt  basic.hpp  bright.h  bright.hpp  find_pothole.hpp  hough.hpp  lane_detect.hpp  lane_laser_scan.hpp  lane_segmentation.hpp  lane_track.h  lidar_new.hpp  lidar_plot.hpp  matrixTransformation.hpp  obsplot.hpp  obstacle_det_vision_lidar.hpp  params.hpp  params_used.txt  rampdetector.hpp  ransac.hpp  ransac_new.hpp  ransac_new_2.hpp  ransac_new_2_odom.hpp  ransac_second.hpp  shadowRemoval.hpp  waypoint_generator.hpp  waypoint_generator_new.hpp  waypoint_generator_new2.hpp  waypoint_generator_new_modified.hpp
src/vision/src/: .master.cpp.swp  .obstacle_tester.cpp  White_obstacle_updated.hpp  master.cpp  master1.cpp  object.hpp  obstacles_prev.hpp  rampdetector.hpp  ransac.hpp  videoPublisher.cpp  waypts1_header.hpp
src/vn_ins/include/: vn_ins.hpp
src/vn_ins/src/: vn_ins.cpp
tf/launch/: tf.launch
tmuxinator/: IGVC.yml
vision/: CMakeLists.txt  Lidar.hpp  Lidar_new.hpp  README.md  White_obstacles_README.txt  find_pothole.hpp  grid.hpp  grid.hpp documentation  grid_lane.cpp  lane_filter.h  lane_filter.h documentation  lidar.txt  objectdetection documentation  objectdetection.h  obsplot.hpp  optimise.cpp  package.xml  ransac.hpp  ransac_updated.hpp  shadowRemoval.hpp  switchgps.cpp  training_neural_net.ipynb  waypts1.cpp  waypts1_header.hpp
vision/src/: README.md  a.out  basic.hpp  combinedobs.hpp  find_pothole.hpp  grid.hpp  grid_object.hpp  lane_segmentation.hpp  lidar.cpp  lidar_new.hpp  lidar_readme_new.txt  master  master.cpp  mlesac.hpp  object.hpp  obsplot.hpp  obstacle_tester  test.cpp  untitled.cpp  waypts1_header.hpp  waypts1_header.txt
